# nebulift

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint.yml  DISTRIBUTED_TRAINING.md  Dockerfile  ML_TRAINING_COMPLETE.md  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  test_model_persistence.py  test_training_pipeline.py  validate_system.py
.circleci/: config.yml
.github/workflows/: ci.yml
argocd/: QUICKSTART.md  README.md  SETUP_SUMMARY.md  applicationset.yaml  namespaces.yaml
argocd/applications/: README.md  nebulift-training-dev.yaml  nebulift-training.yaml
argocd/projects/: nebulift-project.yaml
diagrams/: package-lock.json  package.json
diagrams/specs/: nebulift-app-flow-compact.json  nebulift-app-flow.json  nebulift-decision-hub.json  nebulift-future-track.json
k8s/: README.md  nfs-daemonset.yaml  pvc.yaml  training-job-nfs.yaml  training-job.yaml
k8s/base/: configmap.yaml  kustomization.yaml  nfs-server.yaml  service.yaml  training-job.yaml  training.conf
k8s/overlays/development/: kustomization.yaml  namespace.yaml  training-dev.conf  training-job-patch.yaml
k8s/overlays/production/: configmap-patch.yaml  kustomization.yaml  namespace.yaml  training-job-patch.yaml  training-prod.conf
nebulift/: __init__.py  __main__.py  cli.py  cv_prefilter.py  fits_processor.py  manifest.py  ml_model.py  model_persistence.py  registry.py  training.py
nebulift/distributed/: __init__.py  data_sharding.py  k8s_trainer.py  model_aggregation.py
tests/: __init__.py  test_cli.py  test_cv_prefilter.py  test_fits_processor.py  test_ml_model.py  test_package.py
