[project]
name = "nebulift"
version = "0.4.0"
description = "Automated Quality Assessment for Astrophotography Images"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "David Perez"}
]
keywords = ["astrophotography", "machine-learning", "computer-vision", "fits", "astronomy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    # Core ML and image processing - CPU only for RPi5 compatibility and reduced image size
    "torch>=2.0.0,<2.3.0",
    "torchvision>=0.15.0,<0.18.0",
    "numpy>=1.21.0,<2.0.0",
    "opencv-python>=4.8.0",
    "scikit-image>=0.21.0",
    "pillow>=9.0.0",

    # FITS file handling
    "astropy>=5.0.0",

    # Scientific computing
    "scipy>=1.9.0",
    "matplotlib>=3.5.0",

    # CLI and utilities
    "click>=8.0.0",
    "tqdm>=4.64.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "pre-commit>=3.0.0",

    # Linting and formatting
    "black>=24.0.0",
    "flake8>=6.0.0",
    "flake8-docstrings>=1.7.0",
    "flake8-import-order>=0.18.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",

    # Security and documentation
    "bandit[toml]>=1.7.0",
    "pydocstyle>=6.3.0",

    # Build and validation
    "build>=1.0.0",
    "twine>=4.0.0",

    # Testing infrastructure
    "yamllint>=1.35.0",
]

[project.scripts]
nebulift = "nebulift.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=nebulift --cov-report=term-missing --cov-report=html"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.bandit]
exclude_dirs = ["tests", "test_*.py"]
skips = ["B101", "B404", "B601", "B603"]  # Skip assert, subprocess in CLI

[tool.pydocstyle]
convention = "google"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["nebulift"]
